@@ -12,18 +12,16 @@
       />
     
     <browser:resource
-		name="ui.kss"
-		file="ui.kss"
-		/>
-		
-	<browser:page
-		for="plone.app.kss.interfaces.IPortalObject"
-	    class=".event_view.RecurrenceView"
-		attribute="updateRecurUI"
-		name="updateRecurUI"
-		permission="zope2.View"
-		     />
-		
-
-
+        name="p4a.event.ui.kss"
+        file="p4a.event.ui.kss"
+        />
+        
+    <browser:page
+        for="plone.app.kss.interfaces.IPortalObject"
+        class=".event_view.RecurrenceView"
+        attribute="updateRecurUI"
+        name="updateRecurUI"
+        permission="zope2.View"
+             />
+        
 </configure>
