@@ -1,28 +1,0 @@
-select#frequency:change
-{
-action-server: updateRecurUI;
-updateRecurUI-frequency: currentFormVar(frequency);
-updateRecurUI-interval:  currentFormVar(interval);
-}
-
-#interval:change
-{
-action-server: updateRecurUI;
-updateRecurUI-frequency: currentFormVar(frequency);
-updateRecurUI-interval:  currentFormVar(interval);
-}
-
-
-
-a#fieldsetlegend-recurrence span:click {
-action-server: updateRecurUI;
-updateRecurUI-frequency: currentFormVar(frequency);
-updateRecurUI-interval:  currentFormVar(interval);
-}
-
-document:load
-{
-action-server: updateRecurUI;
-updateRecurUI-frequency: currentFormVar(frequency);
-updateRecurUI-interval:  currentFormVar(interval);
-}
